syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.github.feather.queryServer.proto";

package queryServer;

// gRPC definition for ShoppingCartService



service QueryApi {

    rpc query (QueryDto) returns (Data) {}

}

message QueryDto {
    DataSource dataSource = 1;
    repeated Param param = 2;
    repeated Column column = 3;
    repeated ParamGroup group = 4;
}

message DataSource {
    int32 dbType = 1;
    string host = 2;
    int32 port = 3;
    string database = 4;
    string user = 5;
    string password = 6;
    string param = 7;
    string tableName = 8;
}

message Param {
    int32 group = 1;
    int32 logicType = 2;
    string name = 3;
    int32 dataType = 4;
    int32 length = 5;
    int32 operator = 6;
    string column = 7;
    string value = 8;
}

message ParamGroup {
    int32 id = 1;
    int32 logicType = 2;
}

message Column {
    string name = 1;
    int32 dataType = 2;
    int32 length = 3;
}

message Data {
    int32 status = 1;
    string msg = 2;
    string data = 3;
}
